# ryanhill1.github.io

./: .gitignore  CNAME  README.md  VECTOR_DB_SETUP.md  cli.html  index.html  package-lock.json  package.json  pyproject.toml  start_server.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  format.yml  jekyll-gh-pages.yml  static.yml
build_app/: __main__.py
components/: cli.js  vector-db.js  waveforms.js
components/data/: links.yaml
data/documents/: README.md  cv.txt
scripts/: generate-embeddings.js  generate_embeddings.py
src/: game.js  index.html  style.css
style/: base.css  cli.css
